--- a/navbar.css
+++ b/navbar.css
@@ -1,16 +1,35 @@
 body{
     margin:0;
     padding:2rem;
+    width: 100%vw;
+    height: 100%vh;
+    font-family: 'Inter', sans-serif;
+
 }
-/* button{
-    visibility: hidden;
-} */
+body p{
+   
+    font-size: 15px;
+    font-weight: 200;
+    color: hsl(236, 13%, 42%);
+  
+}
+
 #navbar{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-left: 2rem;
     padding-right: 2rem;
+}
+.readMore-btn{
+    background-color:hsl(5, 85%, 63%);
+    color:antiquewhite;
+    font-size: 8px;
+    font-weight: 600;
+    letter-spacing: 2px;
+    padding: .5em;
+    width: 100px;
+    border: none;
 }
 .nav-container{
     height: 4rem;
@@ -25,7 +44,7 @@ body{
     text-decoration: none;
     padding-right: .5rem;
     font-weight: 500;
-    color: #8d99ae;
+    color: hsl(236, 13%, 42%);
     margin-right: 5px;
     padding: 5px;
     
@@ -61,19 +80,41 @@ body{
     background-color:#4a4e69;
 }  
 main{
-    /* border: 1px solid black; */
-    /* margin: inherit; */
+   
     padding: inherit;
 }
 .hero{
     display: flex;
     flex-wrap: nowrap;
 }
+.hero-header{
+    font-size: 3rem;
+    padding: 0;
+    margin: 0;
+    padding-top: 5px;
+}
 #hero-img{
     width:90%;
     display: block;
-    
 }
-.main-section{
+.hero-container{
     width: 100%
+}
+.hero-section{
+    display: flex;
+}
+.tabs{
+    display: flex;
+}
+.tab-1, .tab-2, .tab-3{
+    display: flex;
+}
+.tab-count{
+    color:hsl(236, 13%, 42%);
+    font-weight: 400;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.side-panel{
+    background-color:hsl(240, 100%, 5%);
+    
 }
