--- a/navbar.css
+++ b/navbar.css
@@ -89,6 +89,7 @@ main{
 }
 .hero-header{
     font-size: 3rem;
+    font-weight: 800;
     padding: 0;
     margin: 0;
     padding-top: 5px;
@@ -100,8 +101,13 @@ main{
 .hero-container{
     width: 100%
 }
+
 .hero-section{
     display: flex;
+    justify-content: space-evenly;
+}
+.hero-content{
+    width:50%;
 }
 .tabs{
     display: flex;
@@ -116,5 +122,11 @@ main{
 }
 .side-panel{
     background-color:hsl(240, 100%, 5%);
-    
+
+}
+.side-panel h1{
+    color: hsl(35, 77%, 62%);
+}
+.side-panel h4{
+    color: hsl(36, 100%, 99%);
 }
